--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">CURSO-KOTLIN-APP-IMC</string>
+    <string name="app_name">Calculadora IMC</string>
     <string name="ol_mundo">Olá Mundo!</string>
-      <string name="checkbox">CheckBox</string>
+    <string name="checkbox">CheckBox</string>
     <string name="radiobutton">RadioButton</string>
 </resources>
